--- a/animalsanswer.html
+++ b/animalsanswer.html
@@ -22,14 +22,20 @@
       border-radius: 12px;
       text-align: center;
       box-shadow: 0 0 15px rgba(0,0,0,0.5);
+      max-width: 500px;
     }
     .japanese {
       font-size: 48px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     .english {
       font-size: 24px;
       color: #aaa;
+      margin-bottom: 10px;
+    }
+    .definition {
+      font-size: 18px;
+      color: #ccc;
     }
     button {
       margin-top: 30px;
@@ -51,11 +57,11 @@
   <div class="card">
     <div class="japanese" id="japanese">...</div>
     <div class="english" id="english">...</div>
+    <div class="definition" id="definition">...</div>
     <button onclick="goBack()">Continue</button>
   </div>
 
   <script>
-    // Get the word passed in the URL
     const urlParams = new URLSearchParams(window.location.search);
     const answer = urlParams.get("answer");
 
@@ -64,31 +70,34 @@
         const response = await fetch("animals.json");
         const animals = await response.json();
 
-        const wordData = animals.find(item => item.japanese === answer);
+        // Match against any item where answer is included in the answers array
+        const wordData = animals.find(item =>
+          item.answers.includes(answer)
+        );
 
         if (wordData) {
           document.getElementById("japanese").textContent = wordData.japanese || "No answer found";
-          document.getElementById("english").textContent = wordData.english || "No definition found";
+          document.getElementById("english").textContent = wordData.english || "No translation found";
+          document.getElementById("definition").textContent = wordData.definition || "No definition found";
 
-          // Store the current word in sessionStorage for feedback or future reference
+          // Store the current word for reference
           sessionStorage.setItem("lastAnswer", JSON.stringify(wordData));
         } else {
           document.getElementById("japanese").textContent = "Word not found";
-          document.getElementById("english").textContent = "Definition not available";
+          document.getElementById("english").textContent = "";
+          document.getElementById("definition").textContent = "";
         }
       } catch (error) {
         console.error("Error fetching animals.json:", error);
         document.getElementById("japanese").textContent = "Error";
         document.getElementById("english").textContent = "Could not load data";
+        document.getElementById("definition").textContent = "";
       }
     }
 
-    // Run the function to fetch data on page load
     fetchAnimalsData();
 
-    // Go back to the quiz page when the button is clicked
     function goBack() {
-      // Navigate back to the quiz page and keep the session progress intact
       window.location.href = "animals.html";
     }
   </script>
